--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 .nav-inverse a {color:white;}
 
 .jumbotron {
-background-image: url("img/kelly-lisa.jpeg");
+background-image: url("../img/kelly-lisa.jpeg");
 background-size: cover;}
 
-.trans {background-image: url("img/transpBlack50.png");
+.trans {background-image: url("../img/transpBlack50.png");
 background-size: cover; color:white;}
